--- a/Addons/Behavior Pack/manifest.json
+++ b/Addons/Behavior Pack/manifest.json
@@ -4,18 +4,18 @@
 	  "name": "[DEV]NIA V4.0 BP",
 	  "description": "§cThis is an addons which support the function of NIA Server",
 	  "uuid": "cab0bbe3-eb10-465e-b1de-b09facc076c8",
-	  "version": [ 1, 0, 0 ],
-	  "min_engine_version": [ 1, 19, 0 ]
+	  "version": [ 4, 2, 11 ],
+	  "min_engine_version": [ 1, 19, 6 ]
 	},
 	"modules": [
-	  {
-		"language": "javascript",
-		"type": "script",
-		"description": "gametest module",
-		"uuid": "92cd3fe1-e764-425a-aa40-a7e4d7760922",
-		"entry": "scripts/main.js",
-		"version": [ 1, 0, 0 ]
-	  }
+		{
+			"language": "javascript",
+			"type": "script",
+			"description": "gametest module",
+			"uuid": "92cd3fe1-e764-425a-aa40-a7e4d7760922",
+			"entry": "scripts/main.js",
+			"version": [ 1, 0, 0 ]
+		}
 	],
 	"dependencies": [
 		{
@@ -27,8 +27,8 @@
 			"version": "1.0.0-beta"
 		},
 		{
-			"version": [1, 0, 0],
-			"uuid": "981f1ce2-370b-4f58-99d9-9c504a118ec0"
+			"module_name": "@minecraft/server-gametest",
+			"version": "1.0.0-beta"
 		}
 	],
 	"metadata": {
